Using Dockerfile in favour of uberimage plugin
Docker REST API not enabled on standard shippable build image.

Not getting much value out of the plugin.